# MyFirstGameCpp

./: CMakeLists.txt  README.md
src/: Battle.cpp  Battle.h  calculate.cpp  console.cpp  console.h  entity.cpp  entity.h  game.cpp  game.h  main.cpp  ui.cpp  ui.h  utils.cpp
src/level/: level_1.cpp  level_1.h  level_3.h
